@@ -528,6 +528,7 @@ plugins += env.SharedLibrary('plugins/envmap', ['src/luminaires/envmap.cpp'])
 plugins += env.SharedLibrary('plugins/spot', ['src/luminaires/spot.cpp'])
 plugins += env.SharedLibrary('plugins/point', ['src/luminaires/point.cpp'])
 plugins += env.SharedLibrary('plugins/collimated', ['src/luminaires/collimated.cpp'])
+plugins += env.SharedLibrary('plugins/directional', ['src/luminaires/directional.cpp'])
 
 # Integrators
 plugins += env.SharedLibrary('plugins/direct', ['src/integrators/direct/direct.cpp'])
