@@ -1,3 +1,10 @@
+2010-08-12  Wenzel Jakob <wenzel@cs.cornell.edu>
+
+	* converter.cpp: Much better import of COLLADA scenes from
+		blender.
+
+	* importdlg.cpp: User interface for importing scenes.
+
 2010-08-09  Wenzel Jakob <wenzel@cs.cornell.edu>
 
 	* rendersettingsdlg.cpp: Try to maintain the number of 
